added cond f analysis

--- a/posts/2023-01-26-metabolite-power-calculation/index.qmd
+++ b/posts/2023-01-26-metabolite-power-calculation/index.qmd
@@ -3,6 +3,9 @@ title: "Metabolite power calculation"
 author: Gibran Hemani and Nic Timpson
 date: "2023-01-26"
 categories: [power calculation]
+format:
+  html:
+    embed-resources: true
 ---
 
 ## Background
