--- a/posts/2022-12-16-vqtl/index.qmd
+++ b/posts/2022-12-16-vqtl/index.qmd
@@ -2,6 +2,7 @@
 title: "Inflation of vQTLs"
 author: "Gibran Hemani"
 date: "2022-12-16"
+categories: [statistics, genetics, interactions]
 ---
 
 ## Background
