--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,16 @@
 ---
-title: "Notes"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
-  categories: true
+  type: table
+  table-striped: true
+  table-hover: true
+  fields: [date, title, categories]
+  # date-format: "iso"
+  categories: false
   sort-ui: false
-  filter-ui: false
+  filter-ui: true
+  page-size: 100
 page-layout: full
 title-block-banner: true
 ---
