--- a/posts/2024-05-20-meta-reg-instrument-strength/index.qmd
+++ b/posts/2024-05-20-meta-reg-instrument-strength/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Meta regression of instrument strength"
-author: Gibran Hemani
+author: "Si Fang, Gibran Hemani"
 date: "2024-05-20"
 categories: []
 ---
