--- a/posts/2024-05-20-meta-reg-instrument-strength/index.qmd
+++ b/posts/2024-05-20-meta-reg-instrument-strength/index.qmd
@@ -3,6 +3,7 @@ title: "Meta regression of instrument strength"
 author: "Si Fang, Gibran Hemani"
 date: "2024-05-20"
 categories: []
+draft: true
 ---
 
 ```{r}
